# convolution-tool

./: .env.sample  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  environment.sh  requirements.txt  setup.sh
conan/: CMakePresets.json  conanfile.py
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  ImageData.cpp  ImageData.h  Kernel.cpp  Kernel.h  PixelData.cpp  PixelData.h
src/Common/Test/: CMakeLists.txt  Test_ImageData.cpp  Test_Kernel.cpp
src/ImageManager/: CMakeLists.txt  I_ImageManager.h  ImageManager.cpp  ImageManager.h
src/ImageProcessor/: CMakeLists.txt  I_ImageProcessor.h  ImageProcessor.cpp  ImageProcessor.h
src/UI/: CMakeLists.txt  main.cpp  qml.qrc
src/UI/qml/: MainWindow.qml
tools/: build_current_dir.py
